<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/prefaceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:text="@string/preface"
        android:textAlignment="center"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <TextView
        android:id="@+id/numberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prefaceText"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:text="@string/numberPlaceholder"
        android:textSize="@dimen/abc_text_size_display_4_material" />

    <TextView
        android:id="@+id/postfaceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberText"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:text="@string/postface"
        android:textAlignment="center"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <TextView
        android:id="@+id/eventText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postfaceText"
        android:singleLine="false"
        android:text="@string/event"
        android:textAlignment="center"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <TextView
        android:id="@+id/taglineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/abc_action_bar_stacked_max_height"
        android:singleLine="true"
        android:text="@string/tagline"
        android:textAlignment="center"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textStyle="bold|italic" />

</RelativeLayout>
